# tembo-metrics

./: Cargo.toml  Dockerfile  Makefile  README.md  sample-aws-iam-policy.json
.github/actions/argocd-update/: action.yml
.github/workflows/: build-push.yaml  cargo.yaml
chart/templates/: _helpers.yaml  prometheusrules.yaml  service.yaml  servicemonitor.yaml
charts/: README.md
charts/tembo-metrics/: Chart.yaml  README.md.gotmpl  values.yaml
charts/tembo-metrics/templates/: deployment.yaml
charts/templates/: deployment.yaml  serviceaccount.yaml
src/: background_worker.rs  lib.rs  main.rs  metrics.rs  state.rs
src/aws/: cloudformation.rs  iam.rs  mod.rs  servicequotas.rs
src/routes/: health.rs  metrics.rs
