[package]
name = "tembo-metrics"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8"
aws-config = "1.5"
aws-sdk-servicequotas = "1.36"
aws-sdk-cloudformation = "1.41"
aws-sdk-iam = "1.38"
tokio = { version = "1", features = ["rt", "sync", "time", "parking_lot"] }
serde_json = "1"
clap = { version = "4.5", features = ["derive"] }
prometheus = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
parking_lot = "0.12"
rand = "0.8"
